fix: grid overflows on Firefox

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -118,11 +118,7 @@ a {
 
     .card-component {
         grid-column: 1 / -1;
-
-        .k-chart, .k-grid {
-            max-width: 1360px;
-            margin: 0 auto;
-        }
+        overflow: hidden;
     }
 }
 
